welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: value unary_! is not a member of Unit
  while (!estFinal())
         ^SnakeBuggle:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:12: warning: enclosing method estFinal has result type Unit: return value discarded
        return true
        ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      } else return false
                    ^SnakeBuggle:13: warning: enclosing method estFinal has result type Unit: return value discarded
      } else return false
             ^SnakeBuggle:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:17: warning: enclosing method estFinal has result type Unit: return value discarded
        return true
        ^SnakeBuggle:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      } else return false
                    ^SnakeBuggle:18: warning: enclosing method estFinal has result type Unit: return value discarded
      } else return false
             ^